crates/rome_js_formatter/tests/specs/prettier/js/babel-plugins/decimal.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "js\\babel-plugins\\decimal.js"
---

# Input

```js
// https://github.com/babel/babel/pull/11640

100m;
9223372036854775807m;
0.m;
3.1415926535897932m;
100.000m;
.1m;
({ 0m: 0, .1m() {}, get 0.2m(){}, set 3m(_){}, async 4m() {}, *.5m() {} });
1.m;
100m;
9223372036854775807m;
100.m;

// Invalid decimal
2e9m;
016432m;
089m;

// https://github.com/tc39/proposal-decimal
.1m + .2m === .3m;
2.00m;
-0m;
typeof 1m === "bigdecimal";
typeof 1m === "decimal128";

```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,25 +1,38 @@
 // https://github.com/babel/babel/pull/11640
 
-100m;
-9223372036854775807m;
-0m;
-3.1415926535897932m;
-100.0m;
-0.1m;
-({ 0m: 0, 0.1m() {}, get 0.2m() {}, set 3m(_) {}, async 4m() {}, *0.5m() {} });
-1m;
-100m;
-9223372036854775807m;
-100m;
+100m
+9223372036854775807m
+0.m
+3.1415926535897932m
+100.000m
+.1m
+({ 0m: 0, .1m() {}, get
+0.2m()
+{
+}
+, set 3m(_)
+{
+}
+, async 4m()
+{
+}
+, *.5m()
+{
+}
+})
+1.m
+100m
+9223372036854775807m
+100.m
 
 // Invalid decimal
-2e9m;
-016432m;
-089m;
+2e9m
+016432m
+089m
 
 // https://github.com/tc39/proposal-decimal
-0.1m + 0.2m === 0.3m;
-2.0m;
+.1m + .2m === .3m
+2.00m
 -0m;
 typeof 1m === "bigdecimal";
 typeof 1m === "decimal128";
```

# Output

```js
// https://github.com/babel/babel/pull/11640

100m
9223372036854775807m
0.m
3.1415926535897932m
100.000m
.1m
({ 0m: 0, .1m() {}, get
0.2m()
{
}
, set 3m(_)
{
}
, async 4m()
{
}
, *.5m()
{
}
})
1.m
100m
9223372036854775807m
100.m

// Invalid decimal
2e9m
016432m
089m

// https://github.com/tc39/proposal-decimal
.1m + .2m === .3m
2.00m
-0m;
typeof 1m === "bigdecimal";
typeof 1m === "decimal128";
```


# Errors
```
decimal.js:3:1 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a statement but instead found '100m'
  
  × Expected a statement here
  
    ┌─ decimal.js:3:1
    │
  3 │ 100m;
    │ ^^^^
  
decimal.js:4:1 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a statement but instead found '9223372036854775807m'
  
  × Expected a statement here
  
    ┌─ decimal.js:4:1
    │
  4 │ 9223372036854775807m;
    │ ^^^^^^^^^^^^^^^^^^^^
  
decimal.js:5:1 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a statement but instead found '0.m'
  
  × Expected a statement here
  
    ┌─ decimal.js:5:1
    │
  5 │ 0.m;
    │ ^^^
  
decimal.js:6:1 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a statement but instead found '3.1415926535897932m'
  
  × Expected a statement here
  
    ┌─ decimal.js:6:1
    │
  6 │ 3.1415926535897932m;
    │ ^^^^^^^^^^^^^^^^^^^
  
decimal.js:7:1 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a statement but instead found '100.000m'
  
  × Expected a statement here
  
    ┌─ decimal.js:7:1
    │
  7 │ 100.000m;
    │ ^^^^^^^^
  
decimal.js:8:1 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a statement but instead found '.1m'
  
  × Expected a statement here
  
    ┌─ decimal.js:8:1
    │
  8 │ .1m;
    │ ^^^
  
decimal.js:9:4 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a property, a shorthand property, a getter, a setter, or a method but instead found '0m'
  
  × Expected a property, a shorthand property, a getter, a setter, or a method here
  
    ┌─ decimal.js:9:4
    │
  9 │ ({ 0m: 0, .1m() {}, get 0.2m(){}, set 3m(_){}, async 4m() {}, *.5m() {} });
    │    ^^
  
decimal.js:9:11 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a property, a shorthand property, a getter, a setter, or a method but instead found '.1m() {'
  
  × Expected a property, a shorthand property, a getter, a setter, or a method here
  
    ┌─ decimal.js:9:11
    │
  9 │ ({ 0m: 0, .1m() {}, get 0.2m(){}, set 3m(_){}, async 4m() {}, *.5m() {} });
    │           ^^^^^^^
  
decimal.js:9:25 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `)` but instead found `0.2m`
  
  × unexpected
  
    ┌─ decimal.js:9:25
    │
  9 │ ({ 0m: 0, .1m() {}, get 0.2m(){}, set 3m(_){}, async 4m() {}, *.5m() {} });
    │                         ^^^^
  
decimal.js:9:33 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a statement but instead found ', set 3m(_)'
  
  × Expected a statement here
  
    ┌─ decimal.js:9:33
    │
  9 │ ({ 0m: 0, .1m() {}, get 0.2m(){}, set 3m(_){}, async 4m() {}, *.5m() {} });
    │                                 ^^^^^^^^^^^
  
decimal.js:9:46 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a statement but instead found ', async 4m()'
  
  × Expected a statement here
  
    ┌─ decimal.js:9:46
    │
  9 │ ({ 0m: 0, .1m() {}, get 0.2m(){}, set 3m(_){}, async 4m() {}, *.5m() {} });
    │                                              ^^^^^^^^^^^^
  
decimal.js:9:61 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a statement but instead found ', *.5m()'
  
  × Expected a statement here
  
    ┌─ decimal.js:9:61
    │
  9 │ ({ 0m: 0, .1m() {}, get 0.2m(){}, set 3m(_){}, async 4m() {}, *.5m() {} });
    │                                                             ^^^^^^^^
  
decimal.js:9:73 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a statement but instead found '})'
  
  × Expected a statement here
  
    ┌─ decimal.js:9:73
    │
  9 │ ({ 0m: 0, .1m() {}, get 0.2m(){}, set 3m(_){}, async 4m() {}, *.5m() {} });
    │                                                                         ^^
  
decimal.js:10:1 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a statement but instead found '1.m'
  
  × Expected a statement here
  
     ┌─ decimal.js:10:1
     │
  10 │ 1.m;
     │ ^^^
  
decimal.js:11:1 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a statement but instead found '100m'
  
  × Expected a statement here
  
     ┌─ decimal.js:11:1
     │
  11 │ 100m;
     │ ^^^^
  
decimal.js:12:1 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a statement but instead found '9223372036854775807m'
  
  × Expected a statement here
  
     ┌─ decimal.js:12:1
     │
  12 │ 9223372036854775807m;
     │ ^^^^^^^^^^^^^^^^^^^^
  
decimal.js:13:1 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a statement but instead found '100.m'
  
  × Expected a statement here
  
     ┌─ decimal.js:13:1
     │
  13 │ 100.m;
     │ ^^^^^
  
decimal.js:16:1 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a statement but instead found '2e9m'
  
  × Expected a statement here
  
     ┌─ decimal.js:16:1
     │
  16 │ 2e9m;
     │ ^^^^
  
decimal.js:17:1 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a statement but instead found '016432m'
  
  × Expected a statement here
  
     ┌─ decimal.js:17:1
     │
  17 │ 016432m;
     │ ^^^^^^^
  
decimal.js:18:1 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a statement but instead found '089m'
  
  × Expected a statement here
  
     ┌─ decimal.js:18:1
     │
  18 │ 089m;
     │ ^^^^
  
decimal.js:21:1 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a statement but instead found '.1m + .2m === .3m'
  
  × Expected a statement here
  
     ┌─ decimal.js:21:1
     │
  21 │ .1m + .2m === .3m;
     │ ^^^^^^^^^^^^^^^^^
  
decimal.js:22:1 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a statement but instead found '2.00m'
  
  × Expected a statement here
  
     ┌─ decimal.js:22:1
     │
  22 │ 2.00m;
     │ ^^^^^
  
decimal.js:3:4 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × numbers cannot be followed by identifiers directly after
  
  × an identifier cannot appear here
  
    ┌─ decimal.js:3:4
    │
  3 │ 100m;
    │    ^
  
decimal.js:4:20 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × numbers cannot be followed by identifiers directly after
  
  × an identifier cannot appear here
  
    ┌─ decimal.js:4:20
    │
  4 │ 9223372036854775807m;
    │                    ^
  
decimal.js:5:3 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × numbers cannot be followed by identifiers directly after
  
  × an identifier cannot appear here
  
    ┌─ decimal.js:5:3
    │
  5 │ 0.m;
    │   ^
  
decimal.js:6:19 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × numbers cannot be followed by identifiers directly after
  
  × an identifier cannot appear here
  
    ┌─ decimal.js:6:19
    │
  6 │ 3.1415926535897932m;
    │                   ^
  
decimal.js:7:8 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × numbers cannot be followed by identifiers directly after
  
  × an identifier cannot appear here
  
    ┌─ decimal.js:7:8
    │
  7 │ 100.000m;
    │        ^
  
decimal.js:8:3 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × numbers cannot be followed by identifiers directly after
  
  × an identifier cannot appear here
  
    ┌─ decimal.js:8:3
    │
  8 │ .1m;
    │   ^
  
decimal.js:9:5 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × numbers cannot be followed by identifiers directly after
  
  × an identifier cannot appear here
  
    ┌─ decimal.js:9:5
    │
  9 │ ({ 0m: 0, .1m() {}, get 0.2m(){}, set 3m(_){}, async 4m() {}, *.5m() {} });
    │     ^
  
decimal.js:9:13 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × numbers cannot be followed by identifiers directly after
  
  × an identifier cannot appear here
  
    ┌─ decimal.js:9:13
    │
  9 │ ({ 0m: 0, .1m() {}, get 0.2m(){}, set 3m(_){}, async 4m() {}, *.5m() {} });
    │             ^
  
decimal.js:9:28 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × numbers cannot be followed by identifiers directly after
  
  × an identifier cannot appear here
  
    ┌─ decimal.js:9:28
    │
  9 │ ({ 0m: 0, .1m() {}, get 0.2m(){}, set 3m(_){}, async 4m() {}, *.5m() {} });
    │                            ^
  
decimal.js:9:40 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × numbers cannot be followed by identifiers directly after
  
  × an identifier cannot appear here
  
    ┌─ decimal.js:9:40
    │
  9 │ ({ 0m: 0, .1m() {}, get 0.2m(){}, set 3m(_){}, async 4m() {}, *.5m() {} });
    │                                        ^
  
decimal.js:9:55 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × numbers cannot be followed by identifiers directly after
  
  × an identifier cannot appear here
  
    ┌─ decimal.js:9:55
    │
  9 │ ({ 0m: 0, .1m() {}, get 0.2m(){}, set 3m(_){}, async 4m() {}, *.5m() {} });
    │                                                       ^
  
decimal.js:9:66 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × numbers cannot be followed by identifiers directly after
  
  × an identifier cannot appear here
  
    ┌─ decimal.js:9:66
    │
  9 │ ({ 0m: 0, .1m() {}, get 0.2m(){}, set 3m(_){}, async 4m() {}, *.5m() {} });
    │                                                                  ^
  
decimal.js:10:3 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × numbers cannot be followed by identifiers directly after
  
  × an identifier cannot appear here
  
     ┌─ decimal.js:10:3
     │
  10 │ 1.m;
     │   ^
  
decimal.js:11:4 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × numbers cannot be followed by identifiers directly after
  
  × an identifier cannot appear here
  
     ┌─ decimal.js:11:4
     │
  11 │ 100m;
     │    ^
  
decimal.js:12:20 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × numbers cannot be followed by identifiers directly after
  
  × an identifier cannot appear here
  
     ┌─ decimal.js:12:20
     │
  12 │ 9223372036854775807m;
     │                    ^
  
decimal.js:13:5 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × numbers cannot be followed by identifiers directly after
  
  × an identifier cannot appear here
  
     ┌─ decimal.js:13:5
     │
  13 │ 100.m;
     │     ^
  
decimal.js:16:4 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × numbers cannot be followed by identifiers directly after
  
  × an identifier cannot appear here
  
     ┌─ decimal.js:16:4
     │
  16 │ 2e9m;
     │    ^
  
decimal.js:17:7 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × numbers cannot be followed by identifiers directly after
  
  × an identifier cannot appear here
  
     ┌─ decimal.js:17:7
     │
  17 │ 016432m;
     │       ^
  
decimal.js:18:4 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × numbers cannot be followed by identifiers directly after
  
  × an identifier cannot appear here
  
     ┌─ decimal.js:18:4
     │
  18 │ 089m;
     │    ^
  
decimal.js:21:3 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × numbers cannot be followed by identifiers directly after
  
  × an identifier cannot appear here
  
     ┌─ decimal.js:21:3
     │
  21 │ .1m + .2m === .3m;
     │   ^
  
decimal.js:21:9 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × numbers cannot be followed by identifiers directly after
  
  × an identifier cannot appear here
  
     ┌─ decimal.js:21:9
     │
  21 │ .1m + .2m === .3m;
     │         ^
  
decimal.js:21:17 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × numbers cannot be followed by identifiers directly after
  
  × an identifier cannot appear here
  
     ┌─ decimal.js:21:17
     │
  21 │ .1m + .2m === .3m;
     │                 ^
  
decimal.js:22:5 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × numbers cannot be followed by identifiers directly after
  
  × an identifier cannot appear here
  
     ┌─ decimal.js:22:5
     │
  22 │ 2.00m;
     │     ^
  
decimal.js:23:3 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × numbers cannot be followed by identifiers directly after
  
  × an identifier cannot appear here
  
     ┌─ decimal.js:23:3
     │
  23 │ -0m;
     │   ^
  
decimal.js:24:9 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × numbers cannot be followed by identifiers directly after
  
  × an identifier cannot appear here
  
     ┌─ decimal.js:24:9
     │
  24 │ typeof 1m === "bigdecimal";
     │         ^
  
decimal.js:25:9 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × numbers cannot be followed by identifiers directly after
  
  × an identifier cannot appear here
  
     ┌─ decimal.js:25:9
     │
  25 │ typeof 1m === "decimal128";
     │         ^
  

```


